Change to html file.

--- a/week2.html
+++ b/week2.html
@@ -2,31 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Week #2 Assignment: Reptile Cards</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <title>Reptiles</title>
 </head>
 <body>
-    <div class="card-deck text-center">
-        <div class="card">
-            <div class="card-body">
+    <div class="container">
+        <div class="title text-center mt-4">
+            <h2>Reptiles</h2>
+        </div>
+        <div class="card-deck text-center col-sm mt-3">
+            <div class="card">
                 <placeholder></placeholder>
-                <h5 class="card-title">Snake</h5>
-                <p class="card-text">Here we have an image of a snake. This snake is probably hungry.</p>
+                <div class="card-body">
+                    <h5 class="card-title">Snake</h5>
+                    <p class="card-text">Here we have an image of a snake. This snake is probably hungry.<br>
+                        Did you know that snakes don't have eyelids? Instead, they have a thin membrane attached to their eyes to protect them, which is called brille.</p>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
+            <div class="card">
                 <placeholder2></placeholder2>
-                <h5 class="card-title">Lizard</h5>
-                <p class="card-text">Here we have an image of a lizard. What type of lizard you say? Not sure.</p>
+                <div class="card-body">
+                    <h5 class="card-title">Lizard</h5>
+                    <p class="card-text">Here we have an image of a lizard. What type of lizard you say? Not sure.<br>
+                        Did you know that some species of lizards, specifically desert dwelling, are able to go throughout their whole life without drinking water? Don't try that out at home though.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Disclaimer: Images may sometimes not reflect the subject matter.</small>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
+            <div class="card">
                 <placeholder3></placeholder3>
-                <h5 class="card-title">Turtle</h5>
-                <p class="card-text">Here we have an image of a turtle. I like turtles.</p>
+                <div class="card-body">
+                    <h5 class="card-title">Turtle</h5>
+                    <p class="card-text">Here we have an image of a turtle. How cute!<br>
+                        Did you know that a turtle's shell is part of its skeleton? It's made up of over 50 bones and includes the turtle's rib cage and spine!</p>
+                </div>
             </div>
         </div>
     </div>
